1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* FLIM-ELS (flim-modules): Add `digest-md5'.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* digest-md5.el: New file.
	(digest-md5-digest-uri): New function.
	(digest-md5-digest-response): New function.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (sasl-scram-md5-authenticate-server): Require salted-pass
	instead of passphrase.
	(sasl-scram-md5-client-msg-2): Ditto.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-auth-scram-md5): Erase insecure sequences.
	* sasl.el (sasl-scram-md5-client-msg-2): Erase insecure sequences.
	(TopLevel): Add example for `scram-md5'.
	* scram.el (scram-md5-make-server-msg-2): Rename from `scram-md5-authenticate-server'.
	(scram-md5-make-salted-pass): Don't erase passphrase.
	(scram-make-unique-nonce): Erase unique-id.
	(scram-md5-make-client-msg-1): Erase nonce.
	(scram-md5-make-shared-key): Erase buffer.
	(scram-md5-make-server-msg-2): Ditto.

1999-12-13  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-auth-scram-md5): New function.
	(smtp-authentication-method-alist): Add `scram-md5'.

1999-12-12  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (TopLevel): Require `scram-md5'.

1999-12-11  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (sasl-scram-md5-client-msg-1): New function.
	(sasl-scram-md5-client-msg-2): New function.
	(sasl-scram-md5-authenticate-server): New function.
	(sasl-scram-md5-client-security-info): New variable.

1999-12-09  Kenichi OKADA <okada@opaopa.org>

	* mime-def.el (mime-library-product): Up.

1999-12-06  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (sasl-number-base36): New function.
	(sasl-unique-id): New function.
	(sasl-unique-id-char): New variable.
	* scram-md5.el (scram-make-unique-nonce): Fix to use `sasl-unique-id'.

1999-12-06  Kenichi OKADA <okada@opaopa.org>

	* sha1-el.el: Fix.
	* hex-util.el: Fix.


1999-12-06  Kenichi OKADA <okada@opaopa.org>

	* SLIM: Version 1.13.4 released.
