@@ -1,5 +1,14 @@
 1999-12-13  Kenichi OKADA <okada@opaopa.org>
 
+	* unique-id.el: New file.
+	* scram-md5.el (TopLevel): Require `unique-id'.
+	(scram-make-unique-nonce): Use `unique-id'.
+	* sasl.el (sasl-number-base36): Delete.
+	(sasl-unique-id-char): Delete.
+	(sasl-unique-id): Delete.
+
+1999-12-13  Kenichi OKADA <okada@opaopa.org>
+
 	* FLIM-ELS (flim-modules): Add `digest-md5'.
 
 1999-12-13  Kenichi OKADA <okada@opaopa.org>
